data/all_generated_tests/raw_wast_tests/br_IncorrectConditionEvaluation_666.wast
;; 7. **Test Description**: Create a test using multiple `br_if` instructions with compound conditions, like `br_if` with conjunctions or disjunctions, and verify correct branching based on the condition evaluations.

(assert_invalid
  (module
    (func $test-br-if-compound-conds
      (block (result i32)
        (i32.const 1)
        (i32.const 0)
        (i32.and)
        (br_if 0 (i32.or (i32.const 0) (i32.const 1)))
        (i32.const 1)
      )
    )
  )
  "type mismatch"
)